Node.js v20 and Updating names in reports.

--- a/data/config.template.json
+++ b/data/config.template.json
@@ -1,16 +1,16 @@
 {
   "accounts": {
-    "mummy": {
+    "jpw": {
       "clientcode": "J77302",
       "password": "YOUR_PASSWORD_HERE",
       "privateKey": "TUOTya6a",
-      "totpSecret": "YOUR_MUMMY_TOTP_SECRET_HERE"
+      "totpSecret": "YOUR_JPW_TOTP_SECRET_HERE"
     },
-    "papa": {
+    "pew": {
       "clientcode": "W1573",
       "password": "YOUR_PASSWORD_HERE",
       "privateKey": "VqJ4o4G6",
-      "totpSecret": "YOUR_PAPA_TOTP_SECRET_HERE"
+      "totpSecret": "YOUR_PEW_TOTP_SECRET_HERE"
     }
   },
   "api": {
