--- a/serverless.yml
+++ b/serverless.yml
@@ -147,10 +147,7 @@ package:
     - '!.git/**'
     - '!.gitignore'
     - '!README.md'
-    - '!TROUBLESHOOTING.md'
-    - '!AUTOMATION-GUIDE.md'
-    - '!PROJECT-STRUCTURE.md'
-    - '!SECURITY.md'
+    - '!docs/**'
     - '!data/**'
     - '!bkp/**'
     - '!logs/**'
